2002-11-01  Jody Goldberg <jody@gnome.org>

	* Release 1.1.11

2002-10-27  Jody Goldberg <jody@gnome.org>

	* Release 1.1.10

2002-10-18  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_search): Use g_utf8_strdown, not
	g_strdown.

2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9

2002-08-30  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_text): Avoid copying string.

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".

2002-07-27  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Function description clean up.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-10  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_dollar): Try to make this sane.

2002-05-10  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_mid): Fix error codes.  Speed up.  Avoid
	unnecessary memory allocation.
	(gnumeric_right): Ditto.  Also plug leak.
	(gnumeric_upper): Ditto.
	(gnumeric_clean): Ditto.  Also plug leak.
	(gnumeric_rept): Ditto.
	(gnumeric_trim): Ditto.  Also plug leak.
	(gnumeric_value): Ditto.
	(gnumeric_clean): Use strlen here, not g_utf8_strlen.
	(gnumeric_rept): Undo UTF-8 work.  The original was UTF-8 safe.
	(gnumeric_left): Make UTF-8 safe.

2002-05-09  Almer S. Tigelaar  <almer@gnome.org>

	* functions.c (gnumeric_exact) : Port to UTF-8.
	(gnumeric_lower) : Idem.
	(gnumeric_mid) : Idem and fix segfault that would
	occur when specifying a bigger offset then the
	string length.
	(gnumeric_left): Protect against negatives.
	(gnumeric_right): Idem and port to UTF-8.
	(gnumeric_upper): Port to UTF-8.
	(gnumeric_rept): Idem.
	(gnumeric_clean): Idem.
	(gnumeric_find): Idem.
	(gnumeric_proper): Idem.
	(gnumeric_replace): Idem and kill unused variable.